--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2a7dec70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m                      \u001b[38;5;66;03m# Numerical operations\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m         \u001b[38;5;66;03m# Plotting\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m                   \u001b[38;5;66;03m# Advanced visualization\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01myfinance\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01myf\u001b[39;00m                   \u001b[38;5;66;03m# Fetch stock data\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas_market_calendars\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmcal\u001b[39;00m  \u001b[38;5;66;03m# Market trading calendar\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "# 1. Setup & Imports\n",
     "import os                               # File system operations\n",
@@ -41,7 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "id": "b2ba1210",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "99a1c250",
    "metadata": {},
    "outputs": [
@@ -378,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "04a82e6a",
    "metadata": {},
    "outputs": [
@@ -466,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "bda4eaac",
    "metadata": {},
    "outputs": [
@@ -510,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "dfcb2ed1",
    "metadata": {},
    "outputs": [
@@ -568,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "aff22535",
    "metadata": {},
    "outputs": [
@@ -622,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "aab9dd32",
    "metadata": {},
    "outputs": [
@@ -793,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "286d7a16",
    "metadata": {},
    "outputs": [
@@ -848,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "90229900",
    "metadata": {},
    "outputs": [
@@ -968,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "d389dde3",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "07459208",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "146ddb8c",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "409a0110",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "1d35732d",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "ca764bcf",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "eaa6a770",
    "metadata": {},
    "outputs": [
@@ -1328,11 +1348,66 @@
     "pivot_data.to_csv(CONFIG[\"output_wide\"])\n",
     "print(f\"✅ Wide-format dataset saved: {CONFIG['output_wide']}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4897367d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_price_sma_interactive(dates, prices, sma, save_folder=\"Graphs\", filename=\"price_sma.html\"):\n",
+    "    # Create folder if it doesn't exist\n",
+    "    if not os.path.exists(save_folder):\n",
+    "        os.makedirs(save_folder)\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # Closing price\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=dates,\n",
+    "        y=prices,\n",
+    "        mode='lines',\n",
+    "        name='Close Price',\n",
+    "        line=dict(color='green', width=2)\n",
+    "    ))\n",
+    "\n",
+    "    # SMA line\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=dates,\n",
+    "        y=sma,\n",
+    "        mode='lines',\n",
+    "        name=sma.name,\n",
+    "        line=dict(color='purple', width=2, dash='dash')\n",
+    "    ))\n",
+    "\n",
+    "    # Layout\n",
+    "    fig.update_layout(\n",
+    "        title='Stock Prices with SMA Overlay',\n",
+    "        xaxis_title='Date',\n",
+    "        yaxis_title='Closing Price',\n",
+    "        template='plotly_white',\n",
+    "        width=1200,\n",
+    "        height=600\n",
+    "    )\n",
+    "\n",
+    "    # Show interactive chart\n",
+    "    fig.show()\n",
+    "\n",
+    "    # Save interactive HTML\n",
+    "    save_path = os.path.join(save_folder, filename)\n",
+    "    fig.write_html(save_path)\n",
+    "    print(f\"Interactive chart saved to: {save_path}\")\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "plot_price_sma_interactive(df[\"Date\"], df[\"Close\"], df[\"SMA_30\"])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "PythonFundproject",
    "language": "python",
    "name": "python3"
   },
@@ -1346,7 +1421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
