--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2a7dec70",
    "metadata": {},
    "outputs": [
@@ -24,11 +24,14 @@
     "import pandas as pd                     # Data handling\n",
     "import numpy as np                      # Numerical operations\n",
     "import matplotlib.pyplot as plt         # Plotting\n",
+    "from matplotlib.collections import LineCollection\n",
     "import seaborn as sns                   # Advanced visualization\n",
     "import yfinance as yf                   # Fetch stock data\n",
     "import pandas_market_calendars as mcal  # Market trading calendar\n",
     "from datetime import datetime\n",
     "from scipy import stats                 # Z-score / statistical functions\n",
+    "%matplotlib inline \n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "# Display & Plotting settings\n",
     "pd.set_option(\"display.max_columns\", None)\n",
@@ -1351,7 +1354,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "8df55178",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# SMA for 30 days\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m find_sma(\u001b[43mdf\u001b[49m, \u001b[38;5;241m30\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# SMA for 100 days\u001b[39;00m\n\u001b[0;32m     11\u001b[0m find_sma(df, \u001b[38;5;241m100\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# function for making a simple moving function for a selected amount of days\n",
+    "\n",
+    "def find_sma(df, window_no):\n",
+    "    df[f\"SMA_{window_no}\"] = df['Close'].rolling(window=window_no).mean()\n",
+    "    return df\n",
+    "\n",
+    "# SMA for 30 days\n",
+    "find_sma(df, 30)\n",
+    "\n",
+    "# SMA for 100 days\n",
+    "find_sma(df, 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "4897367d",
    "metadata": {},
    "outputs": [],
@@ -1401,8 +1436,173 @@
     "\n",
     "\n",
     "# Example usage\n",
-    "plot_price_sma_interactive(df[\"Date\"], df[\"Close\"], df[\"SMA_30\"])"
+    "#plot_price_sma_interactive(df[\"Date\"], df[\"Close\"], df[\"SMA_30\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55b4bcc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def highlight_streaks_interactive(df, dates, prices, save_folder=\"Graphs\", filename=\"highlighted_streaks.html\"):\n",
+    "    \"\"\"Highlight upward/downward price movements interactively and export as HTML.\"\"\"\n",
+    "    \n",
+    "    # Ensure folder exists\n",
+    "    if not os.path.exists(save_folder):\n",
+    "        os.makedirs(save_folder)\n",
+    "    \n",
+    "    df['Change'] = df[prices].diff().fillna(0)\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # Loop through each segment (day-to-day)\n",
+    "    for i in range(1, len(df)):\n",
+    "        color = 'green' if df['Change'].iloc[i] > 0 else 'red'\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=df[dates].iloc[i-1:i+1],\n",
+    "            y=df[prices].iloc[i-1:i+1],\n",
+    "            mode='lines',\n",
+    "            line=dict(color=color, width=3),\n",
+    "            showlegend=False\n",
+    "        ))\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        title=\"Close Price - Green for Up, Red for Down\",\n",
+    "        xaxis_title=\"Date\",\n",
+    "        yaxis_title=\"Close Price\",\n",
+    "        template=\"plotly_white\",\n",
+    "        width=1200,\n",
+    "        height=600\n",
+    "    )\n",
+    "\n",
+    "    # Show interactive chart\n",
+    "    fig.show()\n",
+    "\n",
+    "    # Save interactive HTML\n",
+    "    save_path = os.path.join(save_folder, filename)\n",
+    "    fig.write_html(save_path)\n",
+    "    print(f\"Interactive chart saved to: {save_path}\")\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "#highlight_streaks_interactive(df, 'Date', 'Close')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5fc9741f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def annotate_profits_interactive(df, dates, prices, sma, save_folder=\"Graphs\", filename=\"buy_sell_signals.html\"):\n",
+    "    \"\"\"Annotate buy/sell points for profit optimization and export interactive chart.\"\"\"\n",
+    "\n",
+    "    # Ensure folder exists\n",
+    "    if not os.path.exists(save_folder):\n",
+    "        os.makedirs(save_folder)\n",
+    "\n",
+    "    buy_signals = []\n",
+    "    sell_signals = []\n",
+    "    flag = -1  # -1: no position, 1: holding, 0: sold\n",
+    "\n",
+    "    for i in range(len(df)):\n",
+    "        # Buy signal: Close crosses above SMA\n",
+    "        if df[prices].iloc[i] > df[sma].iloc[i]:\n",
+    "            if flag != 1:  # only buy if not already holding\n",
+    "                buy_signals.append(df[prices].iloc[i])\n",
+    "                sell_signals.append(np.nan)\n",
+    "                flag = 1\n",
+    "            else:\n",
+    "                buy_signals.append(np.nan)\n",
+    "                sell_signals.append(np.nan)\n",
+    "\n",
+    "        # Sell signal: Close crosses below SMA\n",
+    "        elif df[prices].iloc[i] < df[sma].iloc[i]:\n",
+    "            if flag != 0:  # only sell if holding\n",
+    "                buy_signals.append(np.nan)\n",
+    "                sell_signals.append(df[prices].iloc[i])\n",
+    "                flag = 0\n",
+    "            else:\n",
+    "                buy_signals.append(np.nan)\n",
+    "                sell_signals.append(np.nan)\n",
+    "        else:\n",
+    "            buy_signals.append(np.nan)\n",
+    "            sell_signals.append(np.nan)\n",
+    "\n",
+    "    df['Buy'] = buy_signals\n",
+    "    df['Sell'] = sell_signals\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # Plot Close Price\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=df[dates],\n",
+    "        y=df[prices],\n",
+    "        mode='lines',\n",
+    "        name='Close Price',\n",
+    "        line=dict(color='blue', width=2)\n",
+    "    ))\n",
+    "\n",
+    "    # Plot SMA line\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=df[dates],\n",
+    "        y=df[sma],\n",
+    "        mode='lines',\n",
+    "        name=sma,\n",
+    "        line=dict(color='orange', width=2, dash='dash')\n",
+    "    ))\n",
+    "\n",
+    "    # Plot Buy signals\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=df[dates],\n",
+    "        y=df['Buy'],\n",
+    "        mode='markers',\n",
+    "        name='Buy Signal',\n",
+    "        marker=dict(symbol='triangle-up', color='green', size=12)\n",
+    "    ))\n",
+    "\n",
+    "    # Plot Sell signals\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=df[dates],\n",
+    "        y=df['Sell'],\n",
+    "        mode='markers',\n",
+    "        name='Sell Signal',\n",
+    "        marker=dict(symbol='triangle-down', color='red', size=12)\n",
+    "    ))\n",
+    "\n",
+    "    # Layout\n",
+    "    fig.update_layout(\n",
+    "        title=\"Stock Buy/Sell Signals Based on SMA Strategy\",\n",
+    "        xaxis_title=\"Date\",\n",
+    "        yaxis_title=\"Price\",\n",
+    "        template=\"plotly_white\",\n",
+    "        width=1300,\n",
+    "        height=600\n",
+    "    )\n",
+    "\n",
+    "    # Show interactive chart\n",
+    "    fig.show()\n",
+    "\n",
+    "    # Save interactive HTML\n",
+    "    save_path = os.path.join(save_folder, filename)\n",
+    "    fig.write_html(save_path)\n",
+    "    print(f\"Interactive chart saved to: {save_path}\")\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "#annotate_profits_interactive(df, \"Date\", \"Close\", \"SMA_30\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10523888",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
