--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -3887,6 +3887,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e196b2c7",
+   "metadata": {},
+   "source": [
+    "#### Exploratory Data Analysis: AAPL Price + SMA Crossovers (2022–2025) ####\n",
+    "The chart above displays Apple’s (AAPL) daily closing price (blue line) and its 10-day Simple Moving Average (SMA 10, orange dashed line) from early 2022 through early 2025. Buy signals (green triangles) mark points where the price crosses above the SMA, and Sell signals (red triangles) indicate price crossing below the SMA.\n",
+    "\n",
+    "### Observations\n",
+    "-  Frequent Crossovers: The chart features frequent buy and sell signals, reflecting AAPL’s active movement around its short-term SMA. These crossovers cluster during periods of heightened volatility or when the price trend sharply changes.\n",
+    "- Trend Phases: During sustained upward trends (such as mid-2024 to early 2025), buy signals tend to initiate long price rallies with fewer intervening sell signals. Conversely, during sideways or choppy periods (notably mid-2022 to early 2023), there is a rapid alternation between signals due to short-lived price swings.\n",
+    "\n",
+    "### Insights\n",
+    "- The visual pattern and signal clustering in the chart help evaluate when SMA-based trading is more effective (trending periods) versus when it might lead to overtrading (sideways markets). Reviewing these patterns helps refine the timing or parameters (e.g., length of SMA) to match current market behavior and an investor’s tolerance for risk and activity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9f41a9e5",
@@ -6245,6 +6261,24 @@
     "# 3) Buy / Sell Signal Graph\n",
     "print(f\"\\n🟢🔴 Buy / Sell Points for {ticker}\")\n",
     "plot_best_buy_sell(cleaned_data, ticker=ticker)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fab3da7b",
+   "metadata": {},
+   "source": [
+    "#### Exploratory Data Analysis: AAPL Optimal Buy/Sell Points (2022–2025) ####\n",
+    "This chart presents Apple's (AAPL) closing price (blue line) and optimal Buy (green triangle) and Sell (red triangle) points from January 2022 to January 2025. \n",
+    "\n",
+    "### Observations\n",
+    "- Active Trading: Buy and Sell signals appear frequently throughout the period, reflecting an approach that responds rapidly to price and trend fluctuations. Signals are tightly clustered during choppy phases (e.g., early 2022 and much of 2023) when price moves are short-lived and reversal-prone.\n",
+    "- Downtrend Periods: In the first half of 2022, Sell signals dominate as price trends downward, with only a few short-lived Buy signals. This highlights the algorithm’s ability to quickly shift to cash or defensive positioning.\n",
+    "- Uptrend Recovery: Starting from mid-2023, Buy signals become more frequent and follow clear upward price movements. The extended rally into late 2024 and early 2025 features more grouped Buy signals and less frequent Sells, showing the approach’s shift towards longer holding periods as the price climbs.\n",
+    "- Signal Clustering: Clusters of signals align with volatile phases and price consolidation; relative sparsity in trending periods (late 2024) reflects fewer changes in trend direction and less trading activity.\n",
+    "\n",
+    "### Insights\n",
+    "- More Buy signals, along with fewer Sell signals, during the extended uptrend in 2024 suggest improved returns for trend-following strategies during these phases."
    ]
   },
   {
@@ -12376,6 +12410,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d18bc0f1",
+   "metadata": {},
+   "source": [
+    "#### Exploratory Data Analysis: AAPL Upward and Downward Trends (2022–2025)####\n",
+    "This chart displays Apple's (AAPL) closing price from early 2022 through late 2025, with trend segments highlighted in color: green for upward trends and red for downward trends. The overlay allows for easy identification of trend changes and the behavior of price momentum over time.\n",
+    "\n",
+    "### Observations\n",
+    "- Alternating Trends: The price series features regular alternation between upward (green) and downward (red) segments, especially during the choppy periods of 2022 and early 2023.\n",
+    "- Sustained Downtrend: Early 2022 to late 2022 is marked by frequent red (downward) stretches, reflecting a period of overall price decline and volatility with only occasional brief green rallies.\n",
+    "- Recovery and Growth: From late 2022 through 2023, green segments increase in duration, showing a persistent recovery and transition into an uptrend. The period from early 2024 onward is dominated by longer, uninterrupted upward trends, sharply pushing price higher.\n",
+    "\n",
+    "### Insights\n",
+    "- Visual Trend Mapping: Segment-based coloring helps quickly locate areas of persistent uptrend (buying opportunities) versus extended declines (riskier or more defensive phases).\n",
+    "- Strategic Implications: Investors can use this type of trend visualization to better time entries and exits, align with prevailing direction, and avoid overtrading in noisy markets. Recognizing longer trend durations can assist with holding through volatility, while frequent switches may call for tighter risk control."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fc8195a1",
@@ -13276,6 +13328,25 @@
     "print(f\"\\n💰 Profit Comparison\")\n",
     "profits_df = calculate_profits(cleaned_data)\n",
     "plot_profit_comparison(profits_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b331a888",
+   "metadata": {},
+   "source": [
+    "#### Exploratory Data Analysis: Profit Comparison (Single vs Multiple Transactions, 2022–2025) ####\n",
+    "The bar chart compares total profits for five stocks—TSLA, MSFT, AAPL, GOOGL, and JPM, using two trading strategies: a single buy-and-hold transaction (blue bars) versus multiple timed transactions (orange bars) over the period 2022 to 2025.\n",
+    "\n",
+    "### Observations\n",
+    "- Consistent Outperformance: For every stock, the multiple transaction strategy yields considerably higher profit than the single transaction. This indicates effective timing and capturing of trends via multiple buys and sells.\n",
+    "- TSLA Dominates: TSLA stands out with the highest profits for both strategies. In particular, multiple transactions on TSLA produce a dramatic gain (over 2500), far exceeding all other tickers and dwarfing the single-transaction result for TSLA (about 372).\n",
+    "- Scaling Effect: Profits for MSFT, AAPL, GOOGL, and JPM all follow the same trend: multiple transactions reward with two to six times greater profit than a buy-and-hold approach. For MSFT, multiple transactions generate roughly 1558 compared to 254 for a single transaction; for AAPL, 835 compared to 135; for GOOGL, 751 compared to 113; and for JPM, 656 compared to 150.\n",
+    "\n",
+    "### Insights\n",
+    "- Benefit of Active Trading: Systematically trading in and out of positions enables the capture of more upswings and avoidance of downturns, significantly boosting returns versus simply holding the stock.\n",
+    "- Higher Volatility Stocks: The gap between strategies is most pronounced in volatile stocks like TSLA, where price swings create more opportunities for effective trading signals.\n",
+    "- Practical Application: While multiple transactions increase profit potential, they may come with added transaction costs and require strict discipline or automation. The chart underscores the importance of strategy choice for optimizing returns depending on market style and risk tolerance.\n"
    ]
   },
   {
@@ -14279,6 +14350,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52742fa3",
+   "metadata": {},
+   "source": [
+    "#### Exploratory Data Analysis: Annualized Risk vs Return with Sharpe Highlight (2022–2025) ####\n",
+    "The scatter plot above presents annualized risk (volatility) on the x-axis and annualized return on the y-axis for five stocks: AAPL, GOOGL, JPM, MSFT, and TSLA. Each point represents a stock, with a special red star marking the stock with the highest Sharpe ratio (\"Best Sharpe\").\n",
+    "\n",
+    "### Observations\n",
+    "- TSLA (Tesla) appears on the far right and higher up, exhibiting both the highest annualized risk and a strong return. This places it as the most volatile and most lucrative asset in the group, but also the riskiest.\n",
+    "- JPM (JPMorgan Chase), highlighted with a red star, has the highest Sharpe ratio—meaning that, relative to its risk, it delivers the best risk-adjusted return. JPM achieves this by combining a comparatively high return with the lowest risk among the group.\n",
+    "- AAPL (Apple) sits in the mid-range for both risk and return, slightly outperforming both MSFT (Microsoft) and GOOGL (Google), which also cluster around moderate risk and moderate return values.\n",
+    "- The distribution shows a clear tradeoff between risk and return: higher returns generally accompany higher risk (TSLA), while stocks like JPM achieve more efficient (risk-adjusted) performance.\n",
+    "\n",
+    "### Insights\n",
+    "- Sharpe Ratio Usefulness: The visual Sharpe highlight allows quick identification of the most efficient stock—not just in terms of return, but factoring in the risk taken to achieve those returns. Investors looking for strong risk-adjusted results may favor JPM over TSLA, despite TSLA's higher absolute return.\n",
+    "- Visual Mapping: Highlighting the \"Best Sharpe\" stock offers a direct visual cue, helping cut through raw numbers to easily see which asset delivers the most favorable blend of risk and reward over the observed period."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb510ef4",
    "metadata": {},
    "source": [
@@ -14336,7 +14426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "PythonFundproject",
    "language": "python",
    "name": "python3"
   },
@@ -14350,7 +14440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
