--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -9,7 +9,20 @@
     "**How to use**\n",
     "1. Open this file in Jupyter / JupyterLab / Colab.  \n",
     "2. Run cells *top to bottom* (Kernel: Python 3.10+ recommended).  \n",
-    "3. When running data fetch cells you'll need internet for `yfinance`; if offline, use the backup CSV path provided in the CONFIG cell."
+    "3. When running data fetch cells you'll need internet for `yfinance`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be6a878",
+   "metadata": {},
+   "source": [
+    "This section sets up the working environment and imports all required Python libraries for data analysis, visualization, and validation.\n",
+    "\n",
+    "I use stable, well-supported libraries like **pandas**, **numpy**, and **matplotlib** for data manipulation and plotting. For financial data retrieval and alignment, I use **yfinance** and **pandas_market_calendars** to integrate market trading calendars directly into the preprocessing pipeline.  \n",
+    "In addition, I configure global plotting and display options to make charts more consistent and the notebook output cleaner and easier to interpret.\n",
+    "\n",
+    "> **Why**: A strong and consistent setup ensures smooth downstream execution and keeps the focus on analysis instead of troubleshooting environment issues.\n"
    ]
   },
   {
@@ -59,8 +72,15 @@
    "metadata": {},
    "source": [
     "## 2) Configuration\n",
-    "Edit `CONFIG` below for tickers, date range, and file paths. For presentations it's convenient to keep defaults,\n",
-    "but you can change tickers or dates interactively.\n"
+    "This configuration cell defines all key parameters used throughout the notebook, including:\n",
+    "\n",
+    "- Target stock tickers (e.g., AAPL, MSFT, TSLA)\n",
+    "- Start and end date ranges for analysis\n",
+    "- Directory paths for saving cleaned and processed data\n",
+    "\n",
+    "By centralizing these variables, I can easily modify the dataset or analysis scope without making changes in multiple places in the code. This makes the workflow cleaner, more maintainable, and easier to reproduce.\n",
+    "\n",
+    "> **Why**: Centralized configuration improves maintainability, reproducibility, and flexibility in scaling the analysis.\n"
    ]
   },
   {
@@ -104,8 +124,16 @@
    "metadata": {},
    "source": [
     "## 3) Data Acquisition\n",
-    "This cell defines `fetch_stock_data()` which uses `yfinance` and falls back to a CSV if `yfinance` fails.\n",
-    "Run the cell to fetch data (or, if offline, ensure backup CSV exists)."
+    "This section focuses on **retrieving historical stock price data**.  \n",
+    "\n",
+    "The main function, `fetch_stock_data()`, uses **yfinance** to download OHLCV (Open, High, Low, Close, Volume) data efficiently for multiple tickers in a single API call. I also implement a fallback to local CSV files, so the notebook remains functional even if the API fails or there is no internet access.  \n",
+    "\n",
+    "The acquisition process includes:\n",
+    "- Validating ticker list and date ranges\n",
+    "- Handling network errors and invalid symbols gracefully\n",
+    "- Returning a multi-indexed DataFrame (Ticker × Date)\n",
+    "\n",
+    "> **Why**: Reliable data acquisition is critical. Using both live API calls and local fallbacks ensures robustness and reduces the risk of broken pipelines during demos or production runs.\n"
    ]
   },
   {
@@ -448,7 +476,20 @@
    "metadata": {},
    "source": [
     "## 4) Cleaning functions\n",
-    "Contains `clean_stock_data()` and `clean_all_tickers()` — robust cleaning, normalize dates, handle missing values, enforce numeric types.\n"
+    "This section standardizes and validates the raw data to make it ready for downstream analysis. The cleaning steps ensure the dataset is accurate, consistent, and analytically sound.\n",
+    "\n",
+    "**Key cleaning steps:**\n",
+    "- Normalize and convert date columns to timezone-naive\n",
+    "- Sort values chronologically\n",
+    "- Drop rows with excessive missing values\n",
+    "- Forward and backward fill remaining gaps\n",
+    "- Remove duplicate entries, preserving first occurrence\n",
+    "- Enforce numeric data types and validate non-negative values\n",
+    "\n",
+    "The functions are modular — `clean_stock_data` processes a single ticker, while `clean_all_tickers` applies the steps in batch for multiple tickers.  \n",
+    "\n",
+    "> **Why**: Clean, validated data prevents downstream analytical errors, improves reliability, and ensures any anomalies detected later reflect actual market behavior rather than data quality issues.\n",
+    "\n"
    ]
   },
   {
@@ -681,7 +722,17 @@
    "metadata": {},
    "source": [
     "## 5) Trading day alignment & Outlier detection\n",
-    "Align data with NYSE trading calendar and detect outliers using Z-score and IQR.\n"
+    "In this section, I align the cleaned dataset with **official NYSE trading calendars** to remove weekends, holidays, and other non-trading days.  \n",
+    "This ensures all calculations — especially streak detection and return analysis — are based on real trading activity.\n",
+    "\n",
+    "**Outlier detection** is then applied using a dual-method approach:\n",
+    "1. **Z-Score Method**: Flags price movements exceeding 3 standard deviations from the mean daily return.\n",
+    "2. **IQR Method**: Uses the interquartile range to detect extreme movements outside the typical distribution.\n",
+    "\n",
+    "This dual-layered detection captures both statistically abnormal and distribution-based outliers, making it more robust against different market behaviors.\n",
+    "\n",
+    "> **Why**: Aligning data with trading calendars prevents calendar distortion, and using two outlier detection methods improves sensitivity to significant market events or data anomalies.\n",
+    "\n"
    ]
   },
   {
@@ -950,11 +1001,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18ee6b04",
+   "metadata": {},
+   "source": [
+    "**Observations:**\n",
+    "* **Daily Returns:** Most cluster around 0–2%, with occasional large spikes showing high volatility.\n",
+    "* **Z-Score Outliers (|Z| > 3):** Fewer but represent extreme market moves, often during earnings or macro events.\n",
+    "* **IQR Outliers:** More frequent, capturing moderately unusual returns beyond typical fluctuations.\n",
+    "* **Volatility Clusters:** Mid-2022, early 2023, and mid-2024 show multiple outliers, indicating sustained market turbulence.\n",
+    "* **Direction:** Both positive and negative spikes occur; extremes are rare relative to normal daily movement.\n",
+    "\n",
+    "**Insights:**\n",
+    "* Outliers mark high-risk days affecting trading strategies.\n",
+    "* Z-score outliers are useful for stress testing; IQR outliers help assess broader volatility.\n",
+    "* Clusters of outliers highlight periods of sustained market activity, informing timing for trades or hedging."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd6f842b",
    "metadata": {},
    "source": [
     "## 6) Data quality report & validation\n",
-    "A short per-ticker report and automated validation tests.\n"
+    "This section verifies the integrity of the processed dataset through a structured **data quality report**.  \n",
+    "\n",
+    "The validation checks include:\n",
+    "- Total row count per ticker\n",
+    "- Start and end dates\n",
+    "- Missing value percentages\n",
+    "- Duplicate entry counts\n",
+    "- Trading day coverage against expected market calendars\n",
+    "\n",
+    "I also run automated validation functions to flag common issues early, such as:\n",
+    "- Missing critical columns\n",
+    "- Gaps in trading dates\n",
+    "- Negative or invalid price entries\n",
+    "\n",
+    "> **Why**: A formal validation step provides confidence that the data is reliable before deeper analysis or visualization. It’s also useful for debugging if anything breaks later in the pipeline.\n"
    ]
   },
   {
@@ -1175,7 +1258,17 @@
    "metadata": {},
    "source": [
     "## 7) Pivot to wide format & basic statistics\n",
-    "Create a pivot table of Close prices and compute mean/volatility/skew/kurtosis/sharpe.\n"
+    "After cleaning and validation, the data is reshaped from **long format** (Date + Ticker) to **wide format** (Date × Ticker).  \n",
+    "This structure makes time series calculations and visualizations more efficient, especially for cross-ticker comparisons.\n",
+    "\n",
+    "Additionally, I compute basic descriptive statistics for each ticker:\n",
+    "- Mean and standard deviation of returns\n",
+    "- Volatility measures\n",
+    "- Skewness and kurtosis\n",
+    "- Simple Sharpe ratio approximation\n",
+    "\n",
+    "> **Why**: Pivoting simplifies multi-ticker analysis and makes statistical computations more intuitive. The descriptive stats provide a first look at how different assets behave and how risky or stable they are.\n",
+    "\n"
    ]
   },
   {
@@ -1327,8 +1420,18 @@
    "metadata": {},
    "source": [
     "## 8) Visualizations (presentation-ready)\n",
-    "Plot price series, SMAs, rolling volatility, correlation heatmap, boxplots, and outlier visualisations.\n",
-    "Each plot cell includes a short presenter note you can read aloud.\n"
+    "This section transforms analytical outputs into clear and **interactive visualizations**.  \n",
+    "I use Plotly and Streamlit in other modules, but here I generate static and interactive plots for exploratory analysis.\n",
+    "\n",
+    "Key visualization components:\n",
+    "- **SMA Chart**: Shows moving averages and potential signal points\n",
+    "- **Buy/Sell Indicator Plot**: Highlights where signals would have triggered trades\n",
+    "- **Streak Plot**: Visualizes sequences of consecutive gains or losses\n",
+    "- **Profit Comparison Chart**: Contrasts performance of different tickers\n",
+    "- **Risk vs Return Scatterplot**: Places each stock on a risk-return map\n",
+    "\n",
+    "> **Why**: Visualizing market patterns helps identify trends, volatility clusters, and strategy performance more intuitively than tables or raw numbers.\n",
+    "\n"
    ]
   },
   {
@@ -12414,7 +12517,7 @@
    "id": "d18bc0f1",
    "metadata": {},
    "source": [
-    "#### Exploratory Data Analysis: AAPL Upward and Downward Trends (2022–2025)####\n",
+    "#### Exploratory Data Analysis: AAPL Upward and Downward Trends (2022–2025)\n",
     "This chart displays Apple's (AAPL) closing price from early 2022 through late 2025, with trend segments highlighted in color: green for upward trends and red for downward trends. The overlay allows for easy identification of trend changes and the behavior of price momentum over time.\n",
     "\n",
     "### Observations\n",
@@ -14373,7 +14476,14 @@
    "metadata": {},
    "source": [
     "## 9) Save cleaned & pivot datasets\n",
-    "Choose to save your cleaned long-format and wide-format datasets to the `data/` folder so downstream modules can use them.\n"
+    "In this section, I save both:\n",
+    "- **Long format dataset** (cleaned and validated)\n",
+    "- **Wide format dataset** (pivoted for analysis)\n",
+    "\n",
+    "These files are stored in the `data/` directory.  \n",
+    "This structure allows other modules (e.g., analytics, dashboards, or machine learning pipelines) to reuse the processed data directly without repeating preprocessing steps.\n",
+    "\n",
+    "> **Why**: Saving outputs improves reproducibility and efficiency, making the workflow modular and production-friendly.\n"
    ]
   },
   {
@@ -14407,20 +14517,6 @@
     "\n",
     "# Example usage:\n",
     "save_outputs(cleaned_data, pivot, CONFIG)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "617a235d",
-   "metadata": {},
-   "source": [
-    "## 10) Presenter notes & suggested talking points\n",
-    "- Show the price series first and point out notable moves (dates).  \n",
-    "- Walk through SMA overlays to explain trend smoothing (mention window).  \n",
-    "- Use correlation heatmap to state which tickers move together.  \n",
-    "- Use boxplots & distribution plots to comment on skewness and fat tails.  \n",
-    "- Show outlier plots and explain methodology (Z-score vs IQR).  \n",
-    "- End with the data quality report (coverage %, missing %) to demonstrate robustness.\n"
    ]
   }
  ],
